--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@moralisweb3/common-evm-utils": "^2.26.1",
+    "@tanstack/react-query": "^5.32.1",
     "@types/node": "20.12.5",
     "@types/react": "18.2.74",
     "@types/react-dom": "18.2.24",
+    "@uploadthing/react": "^6.5.0",
+    "@web3modal/wagmi": "^4.1.11",
     "autoprefixer": "10.4.19",
+    "bcrypt-ts": "^5.0.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
-    "next": "14.1.4",
+    "flowbite-react": "^0.9.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2",
+    "moralis": "^2.26.1",
+    "next": "^14.2.3",
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.4.3",
-    "typescript": "5.4.4"
+    "typescript": "5.4.4",
+    "viem": "^2.9.31",
+    "wagmi": "^2.8.0"
   }
 }
